♻️ :: .toList()로 변경